tests/fixtures/invalid/dim_mismatch_annotation.gcl
// error: declared type does not match expression
param alt: Length = 400.0 km;
node wrong: Mass = @alt + 100.0 km;
